k8s/organizations/organization-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      labels:
        app: organization-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: organization-container
        image: mrmonster786/rnr-backend-base:latest 
        imagePullPolicy: Always
        args: ["python", "-m", "uvicorn", "src.organization.main:app", "--host", "0.0.0.0", "--port", "8007"]
        ports:
        - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  selector:
    app: organization-service
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
