k8s/organizations/organization-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organization-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v1/organizations/$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.rnr.local
    http:
      paths:
      - path: /v1/organizations(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: organization-service
            port:
              number: 8007
